# fingerprint

./: .gitmodules  README.md  package.json  pnpm-lock.yaml
contracts/script/: Chat.s.sol
contracts/src/: Chat.sol
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  errors.rs  lib.rs
src-tauri/src/abi/: Chat.json
src-tauri/src/db/: conn.rs  friend.rs  mod.rs  personal.rs  setup.rs
src-tauri/src/eth/: mod.rs  mutators.rs  queries.rs
src-tauri/src/ui/: create_account.rs  dashboard.rs  login.rs  mod.rs  notifications.rs  profiles.rs
src-tauri/tests/: aes_argon_dh.rs  basic_sqlite_ops.rs  eth_interaction.rs  platform_dirs.rs
src/lib/components/: chat-messages.svelte  index.ts  types.ts
src/routes/: +page.svelte
src/routes/create-local-account/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/login/: +page.svelte
src/routes/notifications/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/splashscreen/: +page.svelte
