[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = "1.41.1"
tauri-plugin-dialog = "2"
platform-dirs = "0.3.0"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
md-5 = "0.10.6"
rusqlite = { version = "0.32.1", features = ["blob"] }
alloy = { version = "0.7.2", features = ["full"] }

[dev-dependencies]
eyre = "0.6.12"

